--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,55 +19,105 @@
 </head>
 
 <body class="bg-white">
+
     <!-- loader -->
     <div id="loader">
         <div class="spinner-border text-primary" role="status"></div>
     </div>
     <!-- * loader -->
 
+    <!-- App Header -->
+    <div class="appHeader no-border">
+        <div class="left">
+            <a href="#" class="headerButton">
+                <ion-icon name="chevron-back-outline"></ion-icon>
+            </a>
+        </div>
+        <div class="pageTitle"></div>
+        <div class="right">
+        </div>
+    </div>
+    <!-- * App Header -->
+
     <!-- App Capsule -->
     <div id="appCapsule" class="mt-5">
         <div class="login-form">
             <div class="section mb-5 ml-2 mr-2">
                 <div class="section-title">
-                    <h1>Welcome back</h1>
+                    <h1>Create Account</h1>
                 </div>
-                <form action="app-pages.html">
+                <form class="needs-validation" novalidate>
                     <div class="form-group boxed">
                         <div class="input-wrapper">
-                            <input type="email" class="form-control" id="email1" placeholder="Email address">
+                            <input type="text" class="form-control" id="name1" placeholder="Full name" required>
                             <i class="clear-input">
                                 <ion-icon name="close-circle"></ion-icon>
                             </i>
+                            <div class="invalid-feedback text-left">Full name is required</div>
                         </div>
                     </div>
 
                     <div class="form-group boxed">
                         <div class="input-wrapper">
-                            <input type="password" class="form-control" id="password1" placeholder="Password">
+                            <input type="email" class="form-control" id="email1" placeholder="Email address" required>
                             <i class="clear-input">
                                 <ion-icon name="close-circle"></ion-icon>
                             </i>
+                            <div class="invalid-feedback text-left">Email is required</div>
                         </div>
+                    </div>
+
+                    <div class="form-group boxed">
+                        <div class="input-wrapper">
+                            <input type="text" class="form-control" id="phonenumber" placeholder="Phone Number" required>
+                            <i class="clear-input">
+                                <ion-icon name="close-circle"></ion-icon>
+                            </i>
+                            <div class="invalid-feedback text-left">Phone number is required</div>
+                        </div>
+                    </div>
+
+                    <div class="form-group boxed">
+                        <div class="input-wrapper">
+                            <input type="password" class="form-control" id="password" placeholder="Password" required>
+                            <i class="clear-input">
+                                <ion-icon name="close-circle"></ion-icon>
+                            </i>
+                            <div class="invalid-feedback text-left">Password is required</div>
+                        </div>
+                    </div>
+
+                    <div class=" mt-1 text-left">
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="customChecka1" required>
+                            <label class="custom-control-label text-muted" for="customChecka1">I accept the <a
+                                    href="javascript:;">Terms & Conditions</a> and <a href="#">Privacy Policy</a>.</label>
+                        </div>
+                        <div class="invalid-feedback">You must agree to the terms to proceed</div>
+
                     </div>
 
                     <div class="form-links mt-2">
                         <div>
-                            <span>Don't have an account?</span> 
-                            <a href="{% url 'customer:sign-up' %}{% if next %}?next={{ next }}{% endif %}">Sign up</a>
+                            <span>Already have an account?</span> <a href="page-register.html">Log in</a>
                         </div>
                         <div><a href="page-forgot-password.html" class="text-muted">Forgot Password?</a></div>
                     </div>
 
                     <div class="form-button-group">
-                        <button type="submit" class="btn btn-primary btn-block btn-lg">Log In</button>
+                        <button type="submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
                     </div>
-
+                    
                 </form>
             </div>
         </div>
+
+
+
     </div>
     <!-- * App Capsule -->
+
+
 
     <!-- ///////////// Js Files ////////////////////  -->
     <!-- Jquery -->
