--- a/templates/signup.html
+++ b/templates/signup.html
@@ -47,19 +47,34 @@
                     <h1>Create Account</h1>
                 </div>
                 <form class="needs-validation" novalidate>
+                    {% csrf_token %}
+                    {{ form.non_field_errors }}
                     <div class="form-group boxed">
+                        {{ form.first_name.errors }}
                         <div class="input-wrapper">
-                            <input type="text" class="form-control" id="name1" placeholder="Full name" required>
+                            {{ form.first_name }}
                             <i class="clear-input">
                                 <ion-icon name="close-circle"></ion-icon>
                             </i>
-                            <div class="invalid-feedback text-left">Full name is required</div>
+                            <div class="invalid-feedback text-left">First name is required</div>
                         </div>
                     </div>
 
                     <div class="form-group boxed">
+                        {{ form.last_name.errors }}
                         <div class="input-wrapper">
-                            <input type="email" class="form-control" id="email1" placeholder="Email address" required>
+                            {{ form.last_name }}
+                            <i class="clear-input">
+                                <ion-icon name="close-circle"></ion-icon>
+                            </i>
+                            <div class="invalid-feedback text-left">Last name is required</div>
+                        </div>
+                    </div>
+
+                    <div class="form-group boxed">
+                        {{ form.email.errors }}
+                        <div class="input-wrapper">
+                            {{ form.email }}
                             <i class="clear-input">
                                 <ion-icon name="close-circle"></ion-icon>
                             </i>
@@ -68,8 +83,9 @@
                     </div>
 
                     <div class="form-group boxed">
+                        {{ form.phone_number.errors }}
                         <div class="input-wrapper">
-                            <input type="text" class="form-control" id="phonenumber" placeholder="Phone Number" required>
+                            {{ form.phone_number }}
                             <i class="clear-input">
                                 <ion-icon name="close-circle"></ion-icon>
                             </i>
@@ -78,8 +94,9 @@
                     </div>
 
                     <div class="form-group boxed">
+                        {{ form.password.errors }}
                         <div class="input-wrapper">
-                            <input type="password" class="form-control" id="password" placeholder="Password" required>
+                            {{ form.password }}
                             <i class="clear-input">
                                 <ion-icon name="close-circle"></ion-icon>
                             </i>
