--- a/templates/index.html
+++ b/templates/index.html
@@ -100,29 +100,9 @@
     </div>
     <!-- * App Capsule -->
 
-    <!-- show this only if user is logged in -->
-    <!-- App Bottom Menu -->
-    <!-- <div class="appBottomMenu">
-        <a href="index.html" class="item">
-            <div class="col">
-                <ion-icon name="settings-outline"></ion-icon>
-                <strong>Settings</strong>
-            </div>
-        </a>
-        <a href="app-components.html" class="item">
-            <div class="col">
-                <ion-icon name="layers-outline"></ion-icon>
-                <strong>History</strong>
-            </div>
-        </a>
-        <a href="app-pages.html" class="item">
-            <div class="col">
-                <ion-icon name="log-out-outline"></ion-icon>
-                <strong>Log Out</strong>
-            </div>
-        </a>
-    </div> -->
-    <!-- * App Bottom Menu -->
+    {% if user.is_authenticated %}
+        {% include 'inc/bottom-menu.html' %}
+    {% endif %}
 
     <!-- ///////////// Js Files ////////////////////  -->
     <!-- Jquery -->
