--- a/templates/signup.html
+++ b/templates/signup.html
@@ -105,15 +105,6 @@
                         </div>
                     </div>
 
-                    <!-- <div class=" mt-1 text-left">
-                        <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="customChecka1" required>
-                            <label class="custom-control-label text-muted" for="customChecka1">I accept the <a
-                                    href="javascript:;">Terms & Conditions</a> and <a href="#">Privacy Policy</a>.</label>
-                        </div>
-                        <div class="invalid-feedback">You must agree to the terms to proceed</div>
-                    </div> -->
-
                     <div class="form-links mt-2">
                         <div>
                             <span>Already have an account?</span> <a href="page-register.html">Log in</a>
@@ -122,7 +113,7 @@
                     </div>
 
                     <div class="form-button-group">
-                        <button type="submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
+                        <button type="submit" id="btn-submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
                     </div>
                     
                 </form>
@@ -147,24 +138,12 @@
     <script src="{% static 'assets/js/base.js' %}"></script>
 
     <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        /* (function () {
-            'use strict';
-            window.addEventListener('load', function () {
-                // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                var forms = document.getElementsByClassName('needs-validation');
-                // Loop over them and prevent submission
-                var validation = Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (form.checkValidity() === false) {
-                            event.preventDefault();
-                            event.stopPropagation();
-                        }
-                        form.classList.add('was-validated');
-                    }, false);
-                });
-            }, false);
-        })(); */
+        (function() {
+            $(".needs-validation").submit(function () {
+                $("#btn-submit").attr("disabled", true);
+                return true;
+            });
+        });
     </script>
 
 </body>
