--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,110 +1,12 @@
-<!doctype html>
-<html lang="en">
+{% extends 'index.html' %}
 
-<head>
-    {% load static %}
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#000000">
-    <title>Mobilekit Mobile UI Kit</title>
-    <meta name="description" content="Mobilekit HTML Mobile UI Kit">
-    <meta name="keywords" content="bootstrap 4, mobile template, cordova, phonegap, mobile, html" />
-    <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}" sizes="32x32">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/img/icon/192x192.png' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
-    <link rel="manifest" href="{% static '__manifest.json' %}">
-</head>
+{% load static %}
 
-<body class="bg-white">
-    <!-- loader -->
-    <div id="loader">
-        <div class="spinner-border text-primary" role="status"></div>
-    </div>
-    <!-- * loader -->
+{% block page-title %}Sign In{% endblock %}
 
-    <!-- App Capsule -->
-    <div id="appCapsule" class="mt-5">
-        <div class="login-form">
-            <div class="section mb-5 ml-2 mr-2">
-                <div class="section-title">
-                    <h1>Welcome back</h1>
-                </div>
-                <form action="app-pages.html">
-                    <div class="form-group boxed">
-                        <div class="input-wrapper">
-                            <input type="email" class="form-control" id="email1" placeholder="Email address">
-                            <i class="clear-input">
-                                <ion-icon name="close-circle"></ion-icon>
-                            </i>
-                        </div>
-                    </div>
+{% block app-capsule %}
+{% include 'inc/capsules/_signin.html' %}
+{% endblock %}
 
-                    <div class="form-group boxed">
-                        <div class="input-wrapper">
-                            <input type="password" class="form-control" id="password1" placeholder="Password">
-                            <i class="clear-input">
-                                <ion-icon name="close-circle"></ion-icon>
-                            </i>
-                        </div>
-                    </div>
-
-                    <div class="form-links mt-2">
-                        <div>
-                            <span>Don't have an account?</span> 
-                            <a href="{% url 'customer:sign-up' %}{% if next %}?next={{ next }}{% endif %}">Sign up</a>
-                        </div>
-                        <div><a href="page-forgot-password.html" class="text-muted">Forgot Password?</a></div>
-                    </div>
-
-                    <div class="form-button-group">
-                        <button type="submit" class="btn btn-primary btn-block btn-lg">Log In</button>
-                    </div>
-
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- * App Capsule -->
-
-    <!-- ///////////// Js Files ////////////////////  -->
-    <!-- Jquery -->
-    <script src="{% static 'assets/js/lib/jquery-3.4.1.min.js' %}"></script>
-    <!-- Bootstrap-->
-    <script src="{% static 'assets/js/lib/popper.min.js' %}"></script>
-    <script src="{% static 'assets/js/lib/bootstrap.min.js' %}"></script>
-    <!-- Ionicons -->
-    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-    <!-- Owl Carousel -->
-    <script src="{% static 'assets/js/plugins/owl-carousel/owl.carousel.min.js' %}"></script>
-    <!-- jQuery Circle Progress -->
-    <script src="{% static 'assets/js/plugins/jquery-circle-progress/circle-progress.min.js' %}"></script>
-    <!-- Base Js File -->
-    <script src="{% static 'assets/js/base.js' %}"></script>
-
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-            'use strict';
-            window.addEventListener('load', function () {
-                // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                var forms = document.getElementsByClassName('needs-validation');
-                // Loop over them and prevent submission
-                var validation = Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (form.checkValidity() === false) {
-                            event.preventDefault();
-                            event.stopPropagation();
-                        }
-                        form.classList.add('was-validated');
-                    }, false);
-                });
-            }, false);
-        })();
-    </script>
-
-</body>
-
-</html>
+{% block bottom-menu %}
+{% endblock %}
