--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,151 +1,27 @@
-<!doctype html>
-<html lang="en">
+{% extends 'index.html' %}
 
-<head>
-    {% load static %}
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#000000">
-    <title>Mobilekit Mobile UI Kit</title>
-    <meta name="description" content="Mobilekit HTML Mobile UI Kit">
-    <meta name="keywords" content="bootstrap 4, mobile template, cordova, phonegap, mobile, html" />
-    <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}" sizes="32x32">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/img/icon/192x192.png' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
-    <link rel="manifest" href="{% static '__manifest.json' %}">
-</head>
+{% load static %}
 
-<body class="bg-white">
+{% block page-title %}Create Account{% endblock %}
 
-    <!-- loader -->
-    <div id="loader">
-        <div class="spinner-border text-primary" role="status"></div>
+{% block app-header %}
+<!-- App Header -->
+<div class="appHeader no-border">
+    <div class="left">
+        <a href="#" class="headerButton">
+            <ion-icon name="chevron-back-outline"></ion-icon>
+        </a>
     </div>
-    <!-- * loader -->
-
-    <!-- App Header -->
-    <div class="appHeader no-border">
-        <div class="left">
-            <a href="#" class="headerButton">
-                <ion-icon name="chevron-back-outline"></ion-icon>
-            </a>
-        </div>
-        <div class="pageTitle"></div>
-        <div class="right">
-        </div>
+    <div class="pageTitle"></div>
+    <div class="right">
     </div>
-    <!-- * App Header -->
+</div>
+<!-- * App Header -->
+{% endblock %}
 
-    <!-- App Capsule -->
-    <div id="appCapsule" class="mt-5">
-        <div class="login-form">
-            <div class="section mb-5 ml-2 mr-2">
-                <div class="section-title">
-                    <h1>Create Account</h1>
-                </div>
-                <form class="needs-validation" method="post" novalidate>
-                    {% csrf_token %}
-                    {{ form.non_field_errors }}
-                    <div class="form-group boxed">
-                        {{ form.first_name.errors }}
-                        <div class="input-wrapper">
-                            {{ form.first_name }}
-                            <i class="clear-input">
-                                <ion-icon name="close-circle"></ion-icon>
-                            </i>
-                            <div class="invalid-feedback text-left">First name is required</div>
-                        </div>
-                    </div>
+{% block app-capsule %}
+{% include 'inc/capsules/_signup.html' %}
+{% endblock %}
 
-                    <div class="form-group boxed">
-                        {{ form.last_name.errors }}
-                        <div class="input-wrapper">
-                            {{ form.last_name }}
-                            <i class="clear-input">
-                                <ion-icon name="close-circle"></ion-icon>
-                            </i>
-                            <div class="invalid-feedback text-left">Last name is required</div>
-                        </div>
-                    </div>
-
-                    <div class="form-group boxed">
-                        {{ form.email.errors }}
-                        <div class="input-wrapper">
-                            {{ form.email }}
-                            <i class="clear-input">
-                                <ion-icon name="close-circle"></ion-icon>
-                            </i>
-                            <div class="invalid-feedback text-left">Email is required</div>
-                        </div>
-                    </div>
-
-                    <div class="form-group boxed">
-                        {{ form.phone_number.errors }}
-                        <div class="input-wrapper">
-                            {{ form.phone_number }}
-                            <i class="clear-input">
-                                <ion-icon name="close-circle"></ion-icon>
-                            </i>
-                            <div class="invalid-feedback text-left">Phone number is required</div>
-                        </div>
-                    </div>
-
-                    <div class="form-group boxed">
-                        {{ form.password.errors }}
-                        <div class="input-wrapper">
-                            {{ form.password }}
-                            <i class="clear-input">
-                                <ion-icon name="close-circle"></ion-icon>
-                            </i>
-                            <div class="invalid-feedback text-left">Password is required</div>
-                        </div>
-                    </div>
-
-                    <div class="form-links mt-2">
-                        <div>
-                            <span>Already have an account?</span> <a href="page-register.html">Log in</a>
-                        </div>
-                        <div><a href="page-forgot-password.html" class="text-muted">Forgot Password?</a></div>
-                    </div>
-
-                    <div class="form-button-group">
-                        <button type="submit" id="btn-submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
-                    </div>
-                    
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- * App Capsule -->
-
-    <!-- ///////////// Js Files ////////////////////  -->
-    <!-- Jquery -->
-    <script src="{% static 'assets/js/lib/jquery-3.4.1.min.js' %}"></script>
-    <!-- Bootstrap-->
-    <script src="{% static 'assets/js/lib/popper.min.js' %}"></script>
-    <script src="{% static 'assets/js/lib/bootstrap.min.js' %}"></script>
-    <!-- Ionicons -->
-    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-    <!-- Owl Carousel -->
-    <script src="{% static 'assets/js/plugins/owl-carousel/owl.carousel.min.js' %}"></script>
-    <!-- jQuery Circle Progress -->
-    <script src="{% static 'assets/js/plugins/jquery-circle-progress/circle-progress.min.js' %}"></script>
-    <!-- Base Js File -->
-    <script src="{% static 'assets/js/base.js' %}"></script>
-
-    <script>
-        (function() {
-            $(".needs-validation").submit(function () {
-                $("#btn-submit").attr("disabled", true);
-                return true;
-            });
-        });
-    </script>
-
-</body>
-
-</html>
+{% block bottom-menu %}
+{% endblock %}
