--- a/templates/inc/capsules/_index.html
+++ b/templates/inc/capsules/_index.html
@@ -18,9 +18,9 @@
                         <label class="label" for="amount">You send</label>
                         {{ form.source_amount }}
                         {{ form.source_amount.errors }}
-                        <i class="clear-input">
+                        <!-- <i class="clear-input">
                             <ion-icon name="close-circle"></ion-icon>
-                        </i>
+                        </i> -->
                     </div>
                 </div>
 
@@ -31,14 +31,20 @@
                     </div>
                 </div>
 
+                <div class="card bg-light mb-2 mt-2">
+                    <div class="card-body">
+                        <p class="card-text"><strong>Exchange Rate</strong> <span>0.0114</span></p>
+                    </div>
+                </div>
+
                 <div class="form-group boxed">
                     <div class="input-wrapper">
                         <label class="label" for="currency">Recipient gets</label>
                         {{ form.dest_amount }}
                         {{ form.dest_amount.errors }}
-                        <i class="clear-input">
+                        <!-- <i class="clear-input">
                             <ion-icon name="close-circle"></ion-icon>
-                        </i>
+                        </i> -->
                     </div>
                 </div>
 
