--- a/templates/inc/capsules/_index.html
+++ b/templates/inc/capsules/_index.html
@@ -31,10 +31,10 @@
                     </div>
                 </div>
 
-                <div class="card bg-light mb-2 mt-2">
-                    <div class="card-body">
-                        <p class="card-text"><strong>Exchange Rate</strong> <span>0.0114</span></p>
-                    </div>
+                <div class="btn-group mt-1 mb-1" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary">
+                        <ion-icon name="close-outline"></ion-icon> <span id="rate">0.0114</span>
+                    </button>
                 </div>
 
                 <div class="form-group boxed">
