--- a/templates/index.html
+++ b/templates/index.html
@@ -67,23 +67,25 @@
         <script src="https://unpkg.com/autonumeric"></script>
         <script>
             AutoNumeric.multiple(['#source_amount', '#dest_amount']);
-            const setDest = (sourceAmount, destCurrency, rate) => {
-                $('#id_dest_currency').val(destCurrency);
+            const setDest = (sourceAmount, destCurrency, rate, symbol) => {
+                $('#id_dest_currency').parents('.form-group').hide();
                 $('#rate').text(rate);
                 destAmount = sourceAmount * parseFloat(rate);
-                $('#dest_amount').val(destAmount);
+                $('#dest_amount').val(symbol + destAmount.toLocaleString('en'));
             }
             $('#id_source_currency').change(() => {
                 const sourceCurrency = $('#id_source_currency').val();
                 const sourceAmount = parseInt($('#source_amount').val().replace(/,/g, ''));
-                let rate, destAmount;
+                let rate, destAmount, symbol;
 
                 if (sourceCurrency == 'NGN') {
-                    setDest(sourceAmount, 'GHS', {{ rates.ngn_to_ghs }})
+                    symbol = 'GH₵';
+                    setDest(sourceAmount, 'GHS', {{ rates.ngn_to_ghs }}, symbol)
                 }
 
                 if (sourceCurrency == 'GHS') {
-                    setDest(sourceAmount, 'NGN', {{ rates.ghs_to_ngn }})
+                    symbol = '₦';
+                    setDest(sourceAmount, 'NGN', {{ rates.ghs_to_ngn }}, symbol)
                 }
             });
         </script>
