Compute destination details on page load.

--- a/templates/inc/capsules/_index.html
+++ b/templates/inc/capsules/_index.html
@@ -33,7 +33,7 @@
 
                 <div class="btn-group mt-1 mb-1" role="group" aria-label="First group">
                     <button type="button" class="btn btn-secondary">
-                        <ion-icon name="close-outline"></ion-icon> <span id="rate">0.0114</span>
+                        <ion-icon name="close-outline"></ion-icon> <span id="rate"></span>
                     </button>
                 </div>
 
