Split setDest into 2 functions.

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,15 +68,19 @@
         <script>
             AutoNumeric.multiple(['#source_amount', '#dest_amount']);
 
-            const setDest = (sourceAmount, destCurrency, rate, symbol) => {
-                $('#id_dest_currency').parents('.form-group').hide();
+            const showRateHideDestCurrency = rate => {
                 $('#rate').text(rate);
+                $('#id_dest_currency').parents('.form-group').hide();
+            }
+
+            const setDest = (sourceAmount, rate, symbol) => {
                 destAmount = sourceAmount * parseFloat(rate);
                 $('#dest_amount').val(symbol + destAmount.toLocaleString('en'));
             }
 
             const sourceAmount = parseInt($('#source_amount').val().replace(/,/g, ''));
-            setDest(sourceAmount, 'GHS', {{ rates.ngn_to_ghs}}, 'GH₵');
+            showRateHideDestCurrency({{ rates.ngn_to_ghs }});
+            setDest(sourceAmount, {{ rates.ngn_to_ghs}}, 'GH₵');
 
             $('#id_source_currency').change(() => {
                 const sourceCurrency = $('#id_source_currency').val();
@@ -84,12 +88,16 @@
 
                 if (sourceCurrency == 'NGN') {
                     symbol = 'GH₵';
-                    setDest(sourceAmount, 'GHS', {{ rates.ngn_to_ghs }}, symbol)
+                    rate = {{ rates.ngn_to_ghs }};
+                    showRateHideDestCurrency(rate);
+                    setDest(sourceAmount, rate, symbol);
                 }
 
                 if (sourceCurrency == 'GHS') {
                     symbol = '₦';
-                    setDest(sourceAmount, 'NGN', {{ rates.ghs_to_ngn }}, symbol);
+                    rate = {{ rates.ghs_to_ngn }};
+                    showRateHideDestCurrency(rate);
+                    setDest(sourceAmount, rate, symbol);
                 }
             });
         </script>
