Refactor further - don't show dest currency field only if source currency is 'BTC'.

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,37 +68,42 @@
         <script>
             AutoNumeric.multiple(['#source_amount', '#dest_amount']);
 
-            const showRateHideDestCurrency = rate => {
-                $('#rate').text(rate);
+            let rate, destAmount, symbol;
+            const sourceAmount = parseInt($('#source_amount').val().replace(/,/g, ''));
+            const sourceCurrency = $('#id_source_currency').val();
+
+            if (sourceCurrency != 'BTC') {
                 $('#id_dest_currency').parents('.form-group').hide();
             }
 
+            const showRate = rate => $('#rate').text(rate);
             const setDest = (sourceAmount, rate, symbol) => {
                 destAmount = sourceAmount * parseFloat(rate);
                 $('#dest_amount').val(symbol + destAmount.toLocaleString('en'));
             }
 
-            const sourceAmount = parseInt($('#source_amount').val().replace(/,/g, ''));
-            showRateHideDestCurrency({{ rates.ngn_to_ghs }});
+            showRate({{ rates.ngn_to_ghs }});
             setDest(sourceAmount, {{ rates.ngn_to_ghs}}, 'GH₵');
 
             $('#id_source_currency').change(() => {
-                const sourceCurrency = $('#id_source_currency').val();
-                let rate, destAmount, symbol;
-
-                if (sourceCurrency == 'NGN') {
+                const sc = $('#id_source_currency').val();
+                if (sc == 'NGN') {
                     symbol = 'GH₵';
                     rate = {{ rates.ngn_to_ghs }};
-                    showRateHideDestCurrency(rate);
+                    showRate(rate);
                     setDest(sourceAmount, rate, symbol);
                 }
 
-                if (sourceCurrency == 'GHS') {
+                if (sc == 'GHS') {
                     symbol = '₦';
                     rate = {{ rates.ghs_to_ngn }};
-                    showRateHideDestCurrency(rate);
+                    showRate(rate);
                     setDest(sourceAmount, rate, symbol);
                 }
+            });
+
+            $('#source_amount').keyup(() => {
+                console.log('hello');
             });
         </script>
         {% endblock %}
